--- a/4/css/style.css
+++ b/4/css/style.css
@@ -36,6 +36,8 @@
   }
   .main-header__logo {
     left: 291px;
+    display: block;
+    z-index: 2;
   }
 }
 @media (min-width: 1200px) {
@@ -147,21 +149,41 @@
   color: #333333;
 }
 .advantages__list {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-direction: column;
   list-style: none;
   margin: 0;
   padding: 0;
 }
+@media (min-width: 768px) {
+  .advantages__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
 .advantages__block-item {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-direction: column;
   background-color: #81B3D2;
   color: #ffffff;
+}
+@media (min-width: 768px) {
+  .advantages__block-item {
+    flex-direction: row;
+    width: 100%;
+  }
+  .advantages__block-item img {
+    width: 100%;
+  }
 }
 .advantages__item-wrapper {
   padding: 33px 18px 40px 18px;
   text-align: center;
+}
+@media (min-width: 768px) {
+  .advantages__item-wrapper {
+    width: 33.3%;
+  }
 }
 .advantages__item {
   padding: 33px 18px 40px 18px;
@@ -170,6 +192,12 @@
 }
 .advantages__item:not(:last-child) {
   border-bottom: solid 1px #d6d6d6;
+}
+@media (min-width: 768px) {
+  .advantages__item {
+    width: 33.3%;
+    box-sizing: border-box;
+  }
 }
 .advantages__title {
   font-family: "PT Sans", sans-serif;
@@ -196,35 +224,6 @@
   font-weight: 400;
   text-transform: uppercase;
 }
-@media (min-width: 768px) {
-  .advantages__text-wrapper {
-    margin: 0 124px;
-    margin-bottom: 55px;
-  }
-  .advantages__list {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(4, 256px);
-  }
-  .advantages__block-item {
-    grid-column: 1 / 4;
-    grid-row: 1 / 2;
-    grid-template-columns: 1fr 2fr;
-  }
-  .advantages__block-item--reverse {
-    grid-row: 3 / 4;
-    grid-template-columns: 2fr 1fr;
-  }
-  .advantages__offering-item {
-    grid-column: 1 / 4;
-    grid-row: 2 / 3;
-  }
-}
-@media (min-width: 1200px) {
-  .advantages__text-wrapper {
-    margin: 0 358px;
-    margin-bottom: 55px;
-  }
-}
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -239,15 +238,27 @@
   overflow: hidden;
 }
 .offering__list {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   list-style: none;
   padding: 0;
   margin: 0 18px 46px 18px;
 }
+@media (min-width: 768px) {
+  .offering__list {
+    flex-direction: row;
+  }
+}
 .offering__item {
   padding-top: 25px;
   padding-left: 47px;
+}
+@media (min-width: 768px) {
+  .offering__item {
+    width: 33.3%;
+    box-sizing: border-box;
+  }
 }
 .offering__title {
   font-family: "PT Sans", sans-serif;
@@ -266,11 +277,6 @@
   text-transform: uppercase;
   margin: 0;
   color: #333333;
-}
-@media (min-width: 768px) {
-  .offering__list {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
 }
 .hotel-search__wrapper {
   margin: 38px 18px 49px 18px;
@@ -393,10 +399,6 @@
   margin-right: 12px;
   color: #333333;
 }
-.page-body {
-  width: 320px;
-  margin: 0;
-}
 .page {
   height: 100%;
 }
@@ -407,6 +409,7 @@
   min-height: 100%;
   align-items: center;
   min-width: 320px;
+  max-width: 1400px;
 }
 .page__main {
   flex-grow: 1;
@@ -484,14 +487,37 @@
   }
 }
 .filling-form {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-direction: column;
   margin: 0 20px;
+}
+@media (min-width: 768px) {
+  .filling-form {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
 .filling-form__wrapper {
   margin: 0 auto;
   padding: 24px 0 39px 0;
   border-top: solid 1px #e5e5e5;
+}
+@media (min-width: 768px) {
+  .filling-form__input-group {
+    width: 50%;
+    box-sizing: border-box;
+  }
+  .filling-form__input-group:nth-child(odd) {
+    padding-right: 3.7%;
+  }
+  .filling-form__input-group:nth-child(even) {
+    padding-left: 3.7%;
+  }
+}
+@media (min-width: 768px) {
+  .filling-form__control-group {
+    width: 100%;
+  }
 }
 .filling-form__control {
   margin: 0;
@@ -513,6 +539,17 @@
   padding: 0;
   list-style: none;
 }
+.filling-form__list--control {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+@media (min-width: 768px) {
+  .filling-form__list--control {
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+}
 .filling-form__item:not(:last-child) {
   margin-bottom: 16px;
 }
@@ -528,13 +565,38 @@
   display: block;
   min-width: 248px;
 }
+.filling-form__text-area {
+  width: 87.2%;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  .filling-form__text-area {
+    width: 84.3%;
+  }
+}
+@media (min-width: 1200px) {
+  .filling-form__text-area {
+    width: 64%;
+  }
+}
 .filling-form__text-input {
   display: flex;
-  margin: 20px 20px 17px 20px;
-  min-width: 280px;
+  margin: 20px auto 17px auto;
+  width: 100%;
+  box-sizing: border-box;
+}
+.filling-form__button-wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: auto;
 }
 .filling-form__button {
   padding: 16px;
+}
+@media (min-width: 768px) {
+  .filling-form__button {
+    width: 50%;
+  }
 }
 .filling-form__legend {
   align-self: end;
@@ -545,50 +607,9 @@
   text-transform: uppercase;
 }
 @media (min-width: 768px) {
-  .filling-form {
-    grid-template-columns: 1fr 1fr;
-  }
-  .filling-form__wrapper--wide {
-    grid-column: 1 / 3;
-  }
-  .filling-form__list--control {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
-  }
-  .filling-form__text-input {
-    min-width: 648px;
-  }
-}
-@media (min-width: 768px) {
-  .filling-form {
-    grid-template-columns: 1fr 1fr;
-    margin: 0 60px;
-  }
-  .filling-form__wrapper--wide {
-    grid-column: 1 / 3;
-  }
-  .filling-form__list--control {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
-  }
   .filling-form__legend {
-    justify-self: end;
-  }
-  .filling-form__text-input {
-    min-width: 648px;
-  }
-}
-@media (min-width: 1200px) {
-  .filling-form {
-    margin: 0 120px;
-  }
-  .filling-form__list--control {
-    display: flex;
-  }
-  .filling-form__text-input {
-    min-width: 768px;
+    margin-left: auto;
+    padding: 16px;
   }
 }
 .control-input {
@@ -605,7 +626,6 @@
   color: rgba(0, 0, 0, 0.3);
 }
 .control-input--area {
-  padding: 16px;
   resize: none;
 }
 .control-item:not(:last-child) {
@@ -719,6 +739,18 @@
   padding: 0 20px 25px 20px;
   border-bottom: solid 1px #e5e5e5;
 }
+@media (min-width: 768px) {
+  .media__text-wrapper {
+    padding: 0 155px 25px 155px;
+    border-bottom: 0;
+  }
+}
+@media (min-width: 1200px) {
+  .media__text-wrapper {
+    padding: 0 371px 25px 371px;
+    border-bottom: 0;
+  }
+}
 .media__important-text {
   margin: 0;
   margin-bottom: 30px;
@@ -739,47 +771,40 @@
   text-transform: uppercase;
 }
 .media__cards-wrapper {
-  display: grid;
-  grid-template-columns: 1fr;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 25px 20px;
   border-bottom: solid 1px #e5e5e5;
-}
-.media__card {
-  justify-self: center;
+  width: 100%;
+  box-sizing: border-box;
 }
 @media (min-width: 768px) {
-  .media__text-wrapper {
-    padding: 0 155px 25px 155px;
-    border-bottom: 0;
-  }
   .media__cards-wrapper {
-    grid-template-columns: 1fr 1fr;
-    padding: 0;
-    margin: 0 60px;
-  }
-  .media__card {
-    justify-self: stretch;
-  }
-  .media__card:first-child {
-    grid-column: 1 / 3;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 25px 60px;
   }
 }
 @media (min-width: 1200px) {
-  .media__text-wrapper {
-    padding: 0 371px 25px 371px;
-    border-bottom: 0;
-  }
   .media__cards-wrapper {
-    grid-template-columns: 1fr 1fr 1fr;
-    padding: 0;
-    margin: 0 120px;
+    padding: 25px 0;
   }
+}
+@media (min-width: 768px) {
   .media__card {
-    justify-self: stretch;
+    width: 50%;
   }
   .media__card:first-child {
-    grid-column: 1 / 4;
+    width: 100%;
+  }
+}
+@media (min-width: 1200px) {
+  .media__card {
+    width: 33.3%;
+  }
+  .media__card:first-child {
+    width: 100%;
   }
 }
 .card__image {
