--- a/4/css/style.css
+++ b/4/css/style.css
@@ -3,6 +3,7 @@
   font-weight: 26px;
 }
 .main-header {
+  margin: 0 auto;
   min-width: 320px;
   min-height: 56px;
 }
@@ -11,7 +12,8 @@
   display: block;
   width: 185px;
   height: 96px;
-  left: 67px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .main-header__toggle {
   cursor: pointer;
@@ -19,37 +21,27 @@
   height: 22px;
   position: absolute;
   right: 20px;
-  top: 17px;
+  top: 50%;
+  transform: translateY(-50%);
   z-index: 2;
 }
 .main-header__nav {
-  position: absolute;
-  top: 0;
-  z-index: 1;
+  position: relative;
 }
 @media (min-width: 768px) {
   .main-header__toggle {
     display: none;
   }
-  .main-header {
-    min-width: 768px;
-  }
-  .main-header__logo {
-    left: 291px;
-    display: block;
-    z-index: 2;
-  }
-}
-@media (min-width: 1200px) {
-  .main-header {
-    min-width: 1200px;
-  }
-  .main-header__logo {
-    left: 507px;
-  }
 }
 .main-nav {
   min-width: 320px;
+}
+.main-nav__wrapper {
+  position: absolute;
+  min-width: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
 }
 .main-nav__list {
   list-style: none;
@@ -60,6 +52,7 @@
   display: none;
 }
 .main-nav__item {
+  display: flex;
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 26px;
@@ -79,13 +72,13 @@
 }
 .main-nav__link {
   display: block;
+  margin: 0 auto;
   color: inherit;
   text-decoration: none;
 }
 @media (min-width: 768px) {
   .main-nav__list {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
   }
   .main-nav {
@@ -125,8 +118,17 @@
   margin: 0 auto;
 }
 .advantages__text-wrapper {
-  margin: 0 18px;
-  margin-bottom: 53px;
+  padding: 0 18px 53px 18px;
+}
+@media (min-width: 768px) {
+  .advantages__text-wrapper {
+    padding: 0 124px 50px 124px;
+  }
+}
+@media (min-width: 1200px) {
+  .advantages__text-wrapper {
+    padding: 0 359px 50px 359px;
+  }
 }
 .advantages__important-text {
   margin: 0;
@@ -159,6 +161,7 @@
   .advantages__list {
     flex-direction: row;
     flex-wrap: wrap;
+    min-width: 100%;
   }
 }
 .advantages__block-item {
@@ -170,10 +173,10 @@
 @media (min-width: 768px) {
   .advantages__block-item {
     flex-direction: row;
-    width: 100%;
+    min-width: 100%;
   }
   .advantages__block-item img {
-    width: 100%;
+    flex: 3;
   }
 }
 .advantages__item-wrapper {
@@ -182,7 +185,7 @@
 }
 @media (min-width: 768px) {
   .advantages__item-wrapper {
-    width: 33.3%;
+    flex: 1;
   }
 }
 .advantages__item {
@@ -195,8 +198,12 @@
 }
 @media (min-width: 768px) {
   .advantages__item {
-    width: 33.3%;
-    box-sizing: border-box;
+    flex: 1;
+  }
+}
+@media (min-width: 768px) {
+  .advantages__offering-item {
+    flex-grow: 1;
   }
 }
 .advantages__title {
@@ -256,8 +263,7 @@
 }
 @media (min-width: 768px) {
   .offering__item {
-    width: 33.3%;
-    box-sizing: border-box;
+    flex: 1;
   }
 }
 .offering__title {
@@ -279,7 +285,7 @@
   color: #333333;
 }
 .hotel-search__wrapper {
-  margin: 38px 18px 49px 18px;
+  padding: 38px 18px 49px 18px;
 }
 .hotel-search__important-text {
   margin: 0;
@@ -306,12 +312,12 @@
 }
 @media (min-width: 768px) {
   .hotel-search__wrapper {
-    margin: 38px 155px 49px 155px;
+    padding: 38px 155px 49px 155px;
   }
 }
 @media (min-width: 1200px) {
   .hotel-search__wrapper {
-    margin: 38px 371px 49px 371px;
+    padding: 38px 371px 49px 371px;
   }
 }
 .button {
@@ -343,7 +349,7 @@
   width: 100%;
 }
 .main-footer__wrapper {
-  margin: 33px 82px;
+  padding: 33px 82px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -359,18 +365,15 @@
   text-transform: uppercase;
 }
 @media (min-width: 768px) {
-  .main-footer {
-    min-width: 768px;
-  }
   .main-footer__wrapper {
     flex-direction: row;
     justify-content: space-between;
-    margin: 36px 60px;
+    padding: 36px 60px;
   }
 }
 @media (min-width: 1200px) {
   .main-footer__wrapper {
-    margin: 36px 120px;
+    padding: 36px 120px;
   }
 }
 .copyright__link {
@@ -478,12 +481,12 @@
 }
 @media (min-width: 768px) {
   .review__text-wrapper {
-    margin: 36px 166px 28px 166px;
+    padding: 36px 166px 28px 166px;
   }
 }
 @media (min-width: 1200px) {
   .review__text-wrapper {
-    margin: 36px 382px 28px 382px;
+    padding: 36px 382px 28px 382px;
   }
 }
 .filling-form {
@@ -495,34 +498,53 @@
   .filling-form {
     flex-direction: row;
     flex-wrap: wrap;
+    margin: 0 60px;
   }
 }
-.filling-form__wrapper {
-  margin: 0 auto;
-  padding: 24px 0 39px 0;
-  border-top: solid 1px #e5e5e5;
-}
-@media (min-width: 768px) {
-  .filling-form__input-group {
-    width: 50%;
-    box-sizing: border-box;
-  }
-  .filling-form__input-group:nth-child(odd) {
-    padding-right: 3.7%;
-  }
-  .filling-form__input-group:nth-child(even) {
-    padding-left: 3.7%;
-  }
-}
-@media (min-width: 768px) {
-  .filling-form__control-group {
-    width: 100%;
+@media (min-width: 1200px) {
+  .filling-form {
+    margin: 0 120px;
   }
 }
 .filling-form__control {
   margin: 0;
   padding: 0;
   border: none;
+}
+.filling-form__input-group {
+  display: flex;
+  flex-direction: column;
+  padding: 24px 0 39px 0;
+  border-top: solid 1px #e5e5e5;
+}
+@media (min-width: 768px) {
+  .filling-form__input-group {
+    flex: 1;
+    justify-content: space-between;
+  }
+}
+.filling-form__control-group {
+  padding: 24px 0 39px 0;
+  border-top: solid 1px #e5e5e5;
+}
+@media (min-width: 768px) {
+  .filling-form__control-group {
+    min-width: 100%;
+  }
+}
+.filling-form__text-area {
+  padding: 24px 0 39px 0;
+  border-top: solid 1px #e5e5e5;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  .filling-form__text-area {
+    min-width: 100%;
+  }
+}
+.filling-form__text-input {
+  min-width: 100%;
+  box-sizing: border-box;
 }
 .filling-form__title {
   font-family: "PT Sans", sans-serif;
@@ -563,43 +585,27 @@
 }
 .filling-form__input {
   display: block;
-  min-width: 248px;
-}
-.filling-form__text-area {
-  width: 87.2%;
-  text-align: center;
-}
-@media (min-width: 768px) {
-  .filling-form__text-area {
-    width: 84.3%;
-  }
-}
-@media (min-width: 1200px) {
-  .filling-form__text-area {
-    width: 64%;
-  }
-}
-.filling-form__text-input {
-  display: flex;
-  margin: 20px auto 17px auto;
-  width: 100%;
-  box-sizing: border-box;
 }
 .filling-form__button-wrapper {
   display: flex;
-  justify-content: space-between;
-  width: auto;
+  flex-direction: column;
+}
+@media (min-width: 768px) {
+  .filling-form__button-wrapper {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 .filling-form__button {
   padding: 16px;
 }
 @media (min-width: 768px) {
   .filling-form__button {
-    width: 50%;
+    flex: 1;
   }
 }
 .filling-form__legend {
-  align-self: end;
+  text-align: end;
   font-family: "PT Sans", sans-serif;
   font-size: 12px;
   line-height: 21px;
@@ -608,8 +614,8 @@
 }
 @media (min-width: 768px) {
   .filling-form__legend {
-    margin-left: auto;
-    padding: 16px;
+    flex: 1;
+    align-self: center;
   }
 }
 .control-input {
@@ -771,9 +777,9 @@
   text-transform: uppercase;
 }
 .media__cards-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
   padding: 25px 20px;
   border-bottom: solid 1px #e5e5e5;
   width: 100%;
@@ -781,38 +787,26 @@
 }
 @media (min-width: 768px) {
   .media__cards-wrapper {
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 25px 60px;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 @media (min-width: 1200px) {
   .media__cards-wrapper {
-    padding: 25px 0;
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 @media (min-width: 768px) {
-  .media__card {
-    width: 50%;
-  }
   .media__card:first-child {
-    width: 100%;
+    grid-column: 1 / 3;
   }
 }
-@media (min-width: 1200px) {
-  .media__card {
-    width: 33.3%;
-  }
+@media (min-width: 768px) {
   .media__card:first-child {
-    width: 100%;
+    grid-column: 1 / 4;
   }
 }
 .card__image {
   margin-bottom: 15px;
-}
-.card__wrapper {
-  display: grid;
-  grid-template-columns: 1fr;
 }
 .card__title {
   font-family: "PT Sans", sans-serif;
