--- a/4/css/style.css
+++ b/4/css/style.css
@@ -4,8 +4,8 @@
 }
 .main-header {
   margin: 0 auto;
-  min-width: 320px;
   min-height: 56px;
+  min-width: 100%;
 }
 .main-header__logo {
   position: absolute;
@@ -32,15 +32,15 @@
   .main-header__toggle {
     display: none;
   }
-}
-.main-nav {
-  min-width: 320px;
+  .main-header__logo {
+    z-index: 2;
+  }
 }
 .main-nav__wrapper {
   position: absolute;
-  min-width: 100%;
   left: 50%;
   transform: translateX(-50%);
+  min-width: 100%;
   z-index: 1;
 }
 .main-nav__list {
@@ -52,17 +52,8 @@
   display: none;
 }
 .main-nav__item {
-  display: flex;
-  font-family: "PT Sans", sans-serif;
-  font-size: 18px;
-  line-height: 26px;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #ffffff;
   background-color: #81B3D2;
   text-align: center;
-  padding-top: 17px;
-  padding-bottom: 12px;
 }
 .main-nav__item:not(:first-child) {
   border-top: solid 1px #cccccc;
@@ -71,33 +62,47 @@
   border-bottom: solid 1px rgba(1, 1, 1, 0.2);
 }
 .main-nav__link {
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  text-transform: uppercase;
   display: block;
   margin: 0 auto;
-  color: inherit;
+  padding-top: 17px;
+  padding-bottom: 12px;
+  color: #ffffff;
   text-decoration: none;
 }
 @media (min-width: 768px) {
   .main-nav__list {
+    position: static;
     display: flex;
     justify-content: space-between;
   }
-  .main-nav {
-    min-width: 768px;
-  }
   .main-nav__item {
+    background-color: transparent;
+  }
+  .main-nav__item:not(:first-child) {
+    border-top: none;
+  }
+  .main-nav__item:not(:last-child) {
+    border-bottom: none;
+  }
+  .main-nav__link {
     font-family: "PT Sans", sans-serif;
     font-size: 14px;
     line-height: 21px;
     font-weight: 400;
     text-transform: uppercase;
-    font-weight: 700;
+    padding: 18px 47px 17px 48px;
     color: #000000;
-    background-color: transparent;
+    font-weight: 700;
   }
 }
 @media (min-width: 1200px) {
-  .main-nav {
-    min-width: 1200px;
+  .main-nav__link {
+    padding: 18px 91px 17px 91px;
   }
 }
 .hero {
@@ -117,6 +122,9 @@
   display: block;
   margin: 0 auto;
 }
+.advantages {
+  margin-bottom: 38px;
+}
 .advantages__text-wrapper {
   padding: 0 18px 53px 18px;
 }
@@ -127,7 +135,7 @@
 }
 @media (min-width: 1200px) {
   .advantages__text-wrapper {
-    padding: 0 359px 50px 359px;
+    padding: 0 358px 50px 358px;
   }
 }
 .advantages__important-text {
@@ -161,7 +169,6 @@
   .advantages__list {
     flex-direction: row;
     flex-wrap: wrap;
-    min-width: 100%;
   }
 }
 .advantages__block-item {
@@ -173,7 +180,7 @@
 @media (min-width: 768px) {
   .advantages__block-item {
     flex-direction: row;
-    min-width: 100%;
+    flex: 100%;
   }
   .advantages__block-item img {
     flex: 2;
@@ -250,7 +257,7 @@
   flex-wrap: wrap;
   list-style: none;
   padding: 0;
-  margin: 0 18px 46px 18px;
+  margin-bottom: 46px;
 }
 @media (min-width: 768px) {
   .offering__list {
@@ -286,6 +293,13 @@
 }
 .hotel-search__wrapper {
   padding: 38px 18px 49px 18px;
+}
+.hotel-search {
+  display: flex;
+  flex-direction: column;
+}
+.hotel-search__map {
+  flex-grow: 1;
 }
 .hotel-search__important-text {
   margin: 0;
@@ -346,7 +360,7 @@
   fill: rgba(255, 255, 255, 0.3);
 }
 .main-footer {
-  width: 100%;
+  min-width: 100%;
 }
 .main-footer__wrapper {
   padding: 33px 82px;
@@ -367,8 +381,9 @@
 @media (min-width: 768px) {
   .main-footer__wrapper {
     flex-direction: row;
-    justify-content: space-between;
     padding: 36px 60px;
+    gap: 0;
+    justify-content: space-between;
   }
 }
 @media (min-width: 1200px) {
@@ -455,10 +470,33 @@
   height: 48px;
 }
 .review__wrapper {
+  margin: 0 20px;
   margin-bottom: 22px;
 }
+@media (min-width: 768px) {
+  .review__wrapper {
+    margin: 0 60px;
+    margin-bottom: 22px;
+  }
+}
+@media (min-width: 1200px) {
+  .review__wrapper {
+    margin: 0 120px;
+    margin-bottom: 22px;
+  }
+}
 .review__text-wrapper {
-  margin: 36px 20px 28px 20px;
+  margin-bottom: 28px;
+}
+@media (min-width: 768px) {
+  .review__text-wrapper {
+    padding: 0 106px;
+  }
+}
+@media (min-width: 1200px) {
+  .review__text-wrapper {
+    padding: 0 262px;
+  }
 }
 .review__important-text {
   font-family: "PT Sans", sans-serif;
@@ -479,31 +517,20 @@
   margin: 0;
   text-align: center;
 }
-@media (min-width: 768px) {
-  .review__text-wrapper {
-    padding: 36px 166px 28px 166px;
-  }
-}
-@media (min-width: 1200px) {
-  .review__text-wrapper {
-    padding: 36px 382px 28px 382px;
-  }
-}
 .filling-form {
   display: flex;
   flex-direction: column;
-  margin: 0 20px;
 }
 @media (min-width: 768px) {
   .filling-form {
     flex-direction: row;
     flex-wrap: wrap;
-    margin: 0 60px;
+    gap: 58px;
   }
 }
 @media (min-width: 1200px) {
   .filling-form {
-    margin: 0 120px;
+    gap: 100px;
   }
 }
 .filling-form__control {
@@ -512,39 +539,29 @@
   border: none;
 }
 .filling-form__input-group {
-  display: flex;
-  flex-direction: column;
   padding: 24px 0 39px 0;
   border-top: solid 1px #e5e5e5;
 }
 @media (min-width: 768px) {
   .filling-form__input-group {
     flex: 1;
-    justify-content: space-between;
   }
 }
 .filling-form__control-group {
   padding: 24px 0 39px 0;
   border-top: solid 1px #e5e5e5;
-}
-@media (min-width: 768px) {
-  .filling-form__control-group {
-    min-width: 100%;
-  }
+  flex: 100%;
 }
 .filling-form__text-area {
   padding: 24px 0 39px 0;
   border-top: solid 1px #e5e5e5;
   text-align: center;
-}
-@media (min-width: 768px) {
-  .filling-form__text-area {
-    min-width: 100%;
-  }
+  flex-grow: 1;
 }
 .filling-form__text-input {
   min-width: 100%;
   box-sizing: border-box;
+  margin: 20px 0 60px 0;
 }
 .filling-form__title {
   font-family: "PT Sans", sans-serif;
@@ -554,12 +571,16 @@
   text-transform: uppercase;
   text-align: center;
   padding: 0;
-  margin: 0 auto 20px auto;
+  margin-bottom: 20px;
 }
 .filling-form__list {
   margin: 0;
   padding: 0;
   list-style: none;
+}
+.filling-form__item {
+  display: flex;
+  flex-direction: column;
 }
 .filling-form__list--control {
   display: flex;
@@ -569,7 +590,7 @@
 @media (min-width: 768px) {
   .filling-form__list--control {
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
   }
 }
 .filling-form__item:not(:last-child) {
@@ -664,7 +685,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
-  z-index: 2;
+  z-index: 3;
 }
 .modal--close {
   display: none;
@@ -673,14 +694,11 @@
   position: relative;
   margin: auto;
   background-color: #ffffff;
-  min-width: 320px;
 }
 .modal__text-wrapper {
-  width: 244px;
   margin: 36px 39px 54px 37px;
 }
 .modal__text-wrapper--error {
-  width: 237px;
   margin: 45px 42px 28px 41px;
 }
 .modal__important-text {
@@ -707,54 +725,49 @@
   padding: 20px;
 }
 .modal__button {
-  padding: 16px;
-  min-width: 280px;
+  padding: 16px 61px;
   margin: 0 auto;
 }
 .modal__button--error {
-  padding: 16px;
-  min-width: 180px;
+  padding: 16px 64px;
   margin: 0 auto 35px auto;
 }
 @media (min-width: 768px) {
-  .modal__wrapper {
-    min-width: 246px;
-  }
-  .modal__wrapper__wrapper--error {
-    min-width: 400px;
-  }
-  .modal__button {
-    min-width: 458px;
-  }
-  .modal__button--error {
-    min-width: 272px;
-  }
   .modal__text-wrapper {
-    width: 444px;
     margin: 51px 98px 54px 98px;
   }
   .modal__text-wrapper--error {
-    width: 307px;
     margin: 45px 42px 28px 41px;
   }
 }
 .media__wrapper {
+  margin: 0 20px;
   margin-bottom: 17px;
 }
+@media (min-width: 768px) {
+  .media__wrapper {
+    margin: 0 60px;
+    margin-bottom: 17px;
+  }
+}
+@media (min-width: 1200px) {
+  .media__wrapper {
+    margin: 0;
+    margin-bottom: 17px;
+  }
+}
 .media__text-wrapper {
-  padding: 0 20px 25px 20px;
   border-bottom: solid 1px #e5e5e5;
 }
 @media (min-width: 768px) {
   .media__text-wrapper {
-    padding: 0 155px 25px 155px;
+    padding: 0 95px;
     border-bottom: 0;
   }
 }
 @media (min-width: 1200px) {
   .media__text-wrapper {
-    padding: 0 371px 25px 371px;
-    border-bottom: 0;
+    padding: 0 371px;
   }
 }
 .media__important-text {
@@ -779,8 +792,8 @@
 .media__cards-wrapper {
   display: grid;
   grid-template-columns: 1fr;
-  justify-items: center;
-  padding: 25px 20px;
+  justify-items: stretch;
+  padding: 25px 0;
   border-bottom: solid 1px #e5e5e5;
   width: 100%;
   box-sizing: border-box;
@@ -800,13 +813,17 @@
     grid-column: 1 / 3;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
   .media__card:first-child {
     grid-column: 1 / 4;
   }
 }
 .card__image {
   margin-bottom: 15px;
+  width: 100%;
+}
+.card__link {
+  display: block;
 }
 .card__title {
   font-family: "PT Sans", sans-serif;
@@ -839,9 +856,32 @@
   width: 23px;
   height: 23px;
 }
+.video-content {
+  margin: 0 20px;
+}
+@media (min-width: 768px) {
+  .video-content {
+    margin: 0 60px;
+  }
+}
+@media (min-width: 1200px) {
+  .video-content {
+    margin: 0 120px;
+  }
+}
 .video-content__text-wrapper {
-  margin: 0 20px 38px 20px;
   text-align: center;
+  margin-bottom: 38px;
+}
+@media (min-width: 768px) {
+  .video-content__text-wrapper {
+    padding: 0 102px;
+  }
+}
+@media (min-width: 1200px) {
+  .video-content__text-wrapper {
+    padding: 0 258px;
+  }
 }
 .video-content__title {
   font-family: "PT Sans", sans-serif;
@@ -859,29 +899,11 @@
   font-weight: 400;
   text-transform: uppercase;
   margin: 0;
-  text-align: center;
 }
 .video-content__link {
-  margin: 0 20px;
   display: block;
 }
-@media (min-width: 768px) {
-  .video-content__text-wrapper {
-    margin: 0 60px 38px 60px;
-  }
-  .video-content__link {
-    margin: 0 60px;
-  }
-}
-@media (min-width: 1200px) {
-  .video-content__text-wrapper {
-    margin: 0 120px 38px 120px;
-  }
-  .video-content__link {
-    margin: 0 120px;
-  }
-}
-.map {
+.video-content__image {
   width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
