:heavy_check_mark: Сборка #4

--- a/4/css/style.css
+++ b/4/css/style.css
@@ -7,15 +7,36 @@
   min-height: 56px;
   min-width: 100%;
 }
-.main-header__logo {
+.main-nav__logo {
   position: absolute;
   display: block;
   width: 185px;
   height: 96px;
   left: 50%;
   transform: translateX(-50%);
+  z-index: 2;
 }
-.main-header__toggle {
+.main-nav--open .main-nav__logo {
+  z-index: -1;
+}
+.main-nav__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+@media (max-width: 767px) {
+  .main-nav--close .main-nav__list {
+    display: none;
+  }
+}
+@media (min-width: 768px) {
+  .main-nav__list {
+    position: static;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+.main-nav__toggle {
   cursor: pointer;
   width: 22px;
   height: 22px;
@@ -25,31 +46,13 @@
   transform: translateY(-50%);
   z-index: 2;
 }
-.main-header__nav {
-  position: relative;
-}
 @media (min-width: 768px) {
-  .main-header__toggle {
+  .main-nav__toggle {
     display: none;
   }
-  .main-header__logo {
-    z-index: 2;
-  }
 }
-.main-nav__wrapper {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  min-width: 100%;
-  z-index: 1;
-}
-.main-nav__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.main-nav__list--close {
-  display: none;
+.main-nav--open .main-nav__toggle {
+  top: 12.5%;
 }
 .main-nav__item {
   background-color: #81B3D2;
@@ -61,25 +64,7 @@
 .main-nav__item:not(:last-child) {
   border-bottom: solid 1px rgba(1, 1, 1, 0.2);
 }
-.main-nav__link {
-  font-family: "PT Sans", sans-serif;
-  font-size: 18px;
-  line-height: 26px;
-  font-weight: 700;
-  text-transform: uppercase;
-  display: block;
-  margin: 0 auto;
-  padding-top: 17px;
-  padding-bottom: 12px;
-  color: #ffffff;
-  text-decoration: none;
-}
 @media (min-width: 768px) {
-  .main-nav__list {
-    position: static;
-    display: flex;
-    justify-content: space-between;
-  }
   .main-nav__item {
     background-color: transparent;
   }
@@ -89,6 +74,22 @@
   .main-nav__item:not(:last-child) {
     border-bottom: none;
   }
+}
+.main-nav__link {
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  text-transform: uppercase;
+  position: relative;
+  display: block;
+  margin: 0 auto;
+  padding-top: 17px;
+  padding-bottom: 12px;
+  color: #ffffff;
+  text-decoration: none;
+}
+@media (min-width: 768px) {
   .main-nav__link {
     font-family: "PT Sans", sans-serif;
     font-size: 14px;
@@ -182,7 +183,9 @@
     flex-direction: row;
     flex: 100%;
   }
-  .advantages__block-item img {
+}
+@media (min-width: 768px) {
+  .advantages__image {
     flex: 2;
   }
 }
@@ -696,10 +699,10 @@
   background-color: #ffffff;
 }
 .modal__text-wrapper {
-  margin: 36px 39px 54px 37px;
+  padding: 36px 39px 54px 37px;
 }
 .modal__text-wrapper--error {
-  margin: 45px 42px 28px 41px;
+  padding: 45px 42px 28px 41px;
 }
 .modal__important-text {
   margin: 0;
@@ -734,10 +737,10 @@
 }
 @media (min-width: 768px) {
   .modal__text-wrapper {
-    margin: 51px 98px 54px 98px;
+    padding: 51px 98px 54px 98px;
   }
   .modal__text-wrapper--error {
-    margin: 45px 42px 28px 41px;
+    padding: 45px 42px 28px 41px;
   }
 }
 .media__wrapper {
