--- a/6/css/style.css
+++ b/6/css/style.css
@@ -192,6 +192,7 @@
 .hero {
   background-image: url("../../img/hero-background.jpg");
   background-position: bottom center;
+  background-repeat: no-repeat;
   background-color: #e5e5e5;
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
@@ -205,12 +206,12 @@
 }
 @media (min-width: 768px) {
   .hero .hero__wrapper {
-    padding: 77px 0 36px 0;
+    padding: 75px 0 36px 0;
   }
 }
 @media (min-width: 1200px) {
   .hero .hero__wrapper {
-    padding: 78px 0 35px 0;
+    padding: 76px 0 35px 0;
   }
 }
 .hero .hero__wrapper--inner {
@@ -238,6 +239,30 @@
 .hero__text {
   display: block;
   margin: 0 auto;
+}
+@media (min-width: 768px) {
+  .hero__text {
+    width: 461px;
+    height: auto;
+  }
+}
+@media (min-width: 1200px) {
+  .hero__text {
+    width: 460px;
+    height: auto;
+  }
+}
+@media (min-width: 768px) {
+  .hero--inner .hero__text {
+    width: 457px;
+    height: auto;
+  }
+}
+@media (min-width: 1200px) {
+  .hero--inner .hero__text {
+    width: 460px;
+    height: auto;
+  }
 }
 .advantages {
   margin-bottom: 38px;
